; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_fweh.c_brcmf_fweh_queue_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_fweh.c_brcmf_fweh_queue_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_fweh_info = type { i32, i32, i32 }
%struct.brcmf_fweh_queue_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcmf_fweh_info*, %struct.brcmf_fweh_queue_item*)* @brcmf_fweh_queue_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcmf_fweh_queue_event(%struct.brcmf_fweh_info* %0, %struct.brcmf_fweh_queue_item* %1) #0 {
  %3 = alloca %struct.brcmf_fweh_info*, align 8
  %4 = alloca %struct.brcmf_fweh_queue_item*, align 8
  %5 = alloca i32, align 4
  store %struct.brcmf_fweh_info* %0, %struct.brcmf_fweh_info** %3, align 8
  store %struct.brcmf_fweh_queue_item* %1, %struct.brcmf_fweh_queue_item** %4, align 8
  %6 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %7 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %6, i32 0, i32 1
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @spin_lock_irqsave(i32* %7, i32 %8)
  %10 = load %struct.brcmf_fweh_queue_item*, %struct.brcmf_fweh_queue_item** %4, align 8
  %11 = getelementptr inbounds %struct.brcmf_fweh_queue_item, %struct.brcmf_fweh_queue_item* %10, i32 0, i32 0
  %12 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %13 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %12, i32 0, i32 2
  %14 = call i32 @list_add_tail(i32* %11, i32* %13)
  %15 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %16 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %15, i32 0, i32 1
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i32 %17)
  %19 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %20 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %19, i32 0, i32 0
  %21 = call i32 @schedule_work(i32* %20)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i32) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
